--- a/index.html
+++ b/index.html
@@ -1,13 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YVTO-Github-Project</title>
     <style>
-        
+        * {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+        }
+
+        body {
+            background: black;
+        }
+
+        video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .text {
+            width: 80%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+        }
+
+        .text span {
+            text-align: center;
+            font-weight: 800;
+            font-size: 30px;
+            color: #777;
+            transition: 1s;
+            -webkit-transition: 1s;
+            -moz-transition: 1s;
+            animation: reveal 2.5s linear forwards;
+            opacity: 0;
+            filter: blur(13px);
+        }
+
+        .text-top {
+            top: 25%;
+        }
+
+        .text-bot {
+            top: 75%;
+        }
+
+        @keyframes reveal {
+            100% {
+                opacity: 1;
+                filter: blur(0);
+            }
+        }
+
+        span:nth-child(1) {
+            animation-delay: 0.7s;
+            -webkit-animation-delay: 0.7s;
+            -moz-animation-delay: 0.7s;
+        }
+
+        span:nth-child(2) {
+            animation-delay: 1.4s;
+            -webkit-animation-delay: 1.4s;
+            -moz-animation-delay: 1.4s;
+        }
+
+        span:nth-child(3) {
+            animation-delay: 2.1s;
+            -webkit-animation-delay: 2.1s;
+            -moz-animation-delay: 2.1s;
+        }
+
+        span:nth-child(4) {
+            animation-delay: 2.8s;
+            -webkit-animation-delay: 2.8s;
+            -moz-animation-delay: 2.8s;
+        }
+
+        span:nth-child(5) {
+            animation-delay: 3.5s;
+            -webkit-animation-delay: 3.5s;
+            -moz-animation-delay: 3.5s;
+        }
     </style>
 </head>
+
 <body>
     <div id="root"></div>
     <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
@@ -17,8 +104,25 @@
         function App() {
 
             return (
-                <div>
-                    
+                <div class='app'>
+                    <div class='container'>
+                        <video autoplay muted playsinline>
+                            <source src='videos/hero.mp4' type='video/mp4' />
+                        </video>
+                        <div class='text text-top'>
+                            <span>ATEŞ SENİ ÇAĞIRIYOOO!</span>
+                        </div>
+                        <div class='text'>
+                            <span>A</span>
+                            <span>D</span>
+                            <span>A</span>
+                            <span>N</span>
+                            <span>A</span>
+                        </div>
+                        <div class='text text-bot'>
+                            <span>#Yaniiiiyüüüüürük</span>
+                        </div>
+                    </div>
                 </div>
             );
         }
@@ -26,4 +130,5 @@
         ReactDOM.render(<App />, document.getElementById('root'));
     </script>
 </body>
+
 </html>
